# opencode-python

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  simple_lsp_test.py  test_code_agent_qwen.py
agents/: __init__.py  base.py  code_agent.py  context.py  file_agent.py  planner.py  runner.py  simple_agent.py
cli/: agent_chat.py  chat.py  tools.py
core/: __init__.py
core/lsp/: __init__.py  client.py  language.py  methods.py  protocol.py  transport.py  utils.py
docs/: flow_control.md
providers/: __init__.py  base.py  manager.py  ollama.py  openai.py  qwen.py
test/: __init__.py  conftest.py  run_tests.py
test/agents/: __init__.py
test/lsp/: __init__.py  test_transport.py
test/providers/: __init__.py
test/tool_registry/: __init__.py
test/tools/: __init__.py  test_diagnose_tool.py  test_glob_tool.py  test_grep_tool.py  test_ls_tool.py  test_patch_tool.py
tool_registry/: __init__.py  registry.py
tools/: __init__.py  code_extraction_tool.py  diagnose_tool.py  file_tools.py  glob_tool.py  grep_tool.py  ls_tool.py  lsp_tools.py  math_tools.py  patch_tool.py  tools.json  tools.py
utils/: code_extraction.py
