[project]
name = "opencode-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]",
    "requests",
    "openai",
    "python-dotenv",
    "pydantic",
    "patch-ng>=1.18.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort", 
    "flake8",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cli", "agents", "providers", "tool_registry", "core"]
